html final ajax-meteo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <span class="tooltip">Tapez une autre ville si vous le souhaitez</span>
         </h1>
 
+        <h3>
+            <span id="date-du-jour"></span>
+        </h3>
+
         <i class="wi"></i>
         
         <h2>
