ajout possibilité prévisions météo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
             <span id="temperature"></span> C° (<span id="conditions"></span>)
         </h2>
 
+
+        <ul id="forecast">
+            <li>demain</li>
+            <li>après demain</li>
+            <li>après après demain</li>
+            <li>demain</li>
+            <li>après demain</li>
+            <li>après après demain</li>
+            <li>demain</li>
+            <li>après demain</li>
+            <li>après après demain</li>
+            <li>demain</li>
+            <li>après demain</li>
+            <li>après après demain</li>
+        </ul>
+
     </section>
 
     <script src="app.js"></script>
