prévisions météo commentées

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </h2>
 
 
-        <ul id="forecast">
+        <!-- <ul id="forecast">
             <li>demain</li>
             <li>après demain</li>
             <li>après après demain</li>
@@ -40,7 +40,7 @@
             <li>demain</li>
             <li>après demain</li>
             <li>après après demain</li>
-        </ul>
+        </ul> -->
 
     </section>
 
